:lipstick:Add z-index to fix delete button value

--- a/blocks/preview-modal.css
+++ b/blocks/preview-modal.css
@@ -1,5 +1,6 @@
 .modal_type_image_preview {
   padding: 0 16px;
+  z-index: 2;
 }
 
 .modal__image_container {
